// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatefulTabs basic render w/ SEO: Stateful tabs render all tab content with renderAll 1`] = `
<Component
  renderAll={true}
>
  <StatefulTabs
    disabled={false}
    onChange={[Function]}
    overrides={Object {}}
    renderAll={true}
    stateReducer={[Function]}
  >
    <Tabs
      activeKey="0"
      disabled={false}
      onChange={[Function]}
      orientation="horizontal"
      overrides={Object {}}
      renderAll={true}
    >
      <Root
        $disabled={false}
        $orientation="horizontal"
        data-baseweb="tabs"
      >
        <MockStyledComponent
          $disabled={false}
          $orientation="horizontal"
          data-baseweb="tabs"
          forwardedRef={null}
        >
          <div
            data-baseweb="tabs"
            styled-component="true"
            test-style={
              Object {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <TabBar
              $disabled={false}
              $orientation="horizontal"
              role="tablist"
            >
              <MockStyledComponent
                $disabled={false}
                $orientation="horizontal"
                forwardedRef={null}
                role="tablist"
              >
                <div
                  role="tablist"
                  styled-component="true"
                  test-style={
                    Object {
                      "backgroundColor": "$theme.colors.tabBarFill",
                      "display": "flex",
                      "flexDirection": "row",
                      "paddingLeft": "$theme.sizing.scale400",
                      "paddingRight": "$theme.sizing.scale400",
                    }
                  }
                >
                  <TabComponent
                    $orientation="horizontal"
                    active={true}
                    disabled={false}
                    expanded={false}
                    id="0"
                    key="0/.0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    title="Tab Link 1"
                  >
                    <Tab
                      $active={true}
                      $disabled={false}
                      $orientation="horizontal"
                      aria-disabled={null}
                      aria-selected={true}
                      id="0"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={true}
                        $disabled={false}
                        $orientation="horizontal"
                        aria-disabled={null}
                        aria-selected={true}
                        forwardedRef={null}
                        id="0"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={true}
                          id="0"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style={
                            Object {
                              ":focus": Object {
                                "color": "$theme.colors.primary",
                              },
                              ":hover": Object {
                                "color": "$theme.colors.primary",
                              },
                              "borderBottom": "2px solid $theme.colors.primary",
                              "boxSizing": "border-box",
                              "color": "$theme.colors.colorPrimary",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "$theme.typography.font200.fontFamily",
                              "fontSize": "$theme.typography.font200.fontSize",
                              "fontWeight": "$theme.typography.font200.fontWeight",
                              "lineHeight": "$theme.typography.font200.lineHeight",
                              "marginLeft": "$theme.sizing.scale200",
                              "marginRight": "$theme.sizing.scale200",
                              "paddingBottom": "$theme.sizing.scale600",
                              "paddingLeft": "$theme.sizing.scale300",
                              "paddingRight": "$theme.sizing.scale300",
                              "paddingTop": "$theme.sizing.scale600",
                            }
                          }
                        >
                          Tab Link 1
                        </div>
                      </MockStyledComponent>
                    </Tab>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="1"
                    key="1/.1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    title="Tab Link 2"
                  >
                    <Tab
                      $active={false}
                      $disabled={false}
                      $orientation="horizontal"
                      aria-disabled={null}
                      aria-selected={false}
                      id="1"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $orientation="horizontal"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={null}
                        id="1"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="1"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style={
                            Object {
                              ":focus": Object {
                                "color": "$theme.colors.primary",
                              },
                              ":hover": Object {
                                "color": "$theme.colors.primary",
                              },
                              "borderBottom": "none",
                              "boxSizing": "border-box",
                              "color": "$theme.colors.tabColor",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "$theme.typography.font200.fontFamily",
                              "fontSize": "$theme.typography.font200.fontSize",
                              "fontWeight": "$theme.typography.font200.fontWeight",
                              "lineHeight": "$theme.typography.font200.lineHeight",
                              "marginLeft": "$theme.sizing.scale200",
                              "marginRight": "$theme.sizing.scale200",
                              "paddingBottom": "$theme.sizing.scale600",
                              "paddingLeft": "$theme.sizing.scale300",
                              "paddingRight": "$theme.sizing.scale300",
                              "paddingTop": "$theme.sizing.scale600",
                            }
                          }
                        >
                          Tab Link 2
                        </div>
                      </MockStyledComponent>
                    </Tab>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="2"
                    key="2/.2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    title="Tab Link 3"
                  >
                    <Tab
                      $active={false}
                      $disabled={false}
                      $orientation="horizontal"
                      aria-disabled={null}
                      aria-selected={false}
                      id="2"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $orientation="horizontal"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={null}
                        id="2"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="2"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style={
                            Object {
                              ":focus": Object {
                                "color": "$theme.colors.primary",
                              },
                              ":hover": Object {
                                "color": "$theme.colors.primary",
                              },
                              "borderBottom": "none",
                              "boxSizing": "border-box",
                              "color": "$theme.colors.tabColor",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "$theme.typography.font200.fontFamily",
                              "fontSize": "$theme.typography.font200.fontSize",
                              "fontWeight": "$theme.typography.font200.fontWeight",
                              "lineHeight": "$theme.typography.font200.lineHeight",
                              "marginLeft": "$theme.sizing.scale200",
                              "marginRight": "$theme.sizing.scale200",
                              "paddingBottom": "$theme.sizing.scale600",
                              "paddingLeft": "$theme.sizing.scale300",
                              "paddingRight": "$theme.sizing.scale300",
                              "paddingTop": "$theme.sizing.scale600",
                            }
                          }
                        >
                          Tab Link 3
                        </div>
                      </MockStyledComponent>
                    </Tab>
                  </TabComponent>
                </div>
              </MockStyledComponent>
            </TabBar>
            <TabContent
              $active={true}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="0"
              key="0/.0"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={true}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="0"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="0"
                  role="tabpanel"
                  styled-component="true"
                  test-style={
                    Object {
                      "display": "block",
                      "fontFamily": "$theme.typography.font300.fontFamily",
                      "fontSize": "$theme.typography.font300.fontSize",
                      "fontWeight": "$theme.typography.font300.fontWeight",
                      "lineHeight": "$theme.typography.font300.lineHeight",
                      "paddingBottom": "$theme.sizing.scale500",
                      "paddingLeft": "$theme.sizing.scale800",
                      "paddingRight": "$theme.sizing.scale800",
                      "paddingTop": "$theme.sizing.scale500",
                    }
                  }
                >
                  Tab 1 content
                </div>
              </MockStyledComponent>
            </TabContent>
            <TabContent
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="1"
              key="1/.1"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="1"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="1"
                  role="tabpanel"
                  styled-component="true"
                  test-style={
                    Object {
                      "display": "none",
                      "fontFamily": "$theme.typography.font300.fontFamily",
                      "fontSize": "$theme.typography.font300.fontSize",
                      "fontWeight": "$theme.typography.font300.fontWeight",
                      "lineHeight": "$theme.typography.font300.lineHeight",
                      "paddingBottom": "$theme.sizing.scale500",
                      "paddingLeft": "$theme.sizing.scale800",
                      "paddingRight": "$theme.sizing.scale800",
                      "paddingTop": "$theme.sizing.scale500",
                    }
                  }
                >
                  Tab 2 content
                </div>
              </MockStyledComponent>
            </TabContent>
            <TabContent
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="2"
              key="2/.2"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="2"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="2"
                  role="tabpanel"
                  styled-component="true"
                  test-style={
                    Object {
                      "display": "none",
                      "fontFamily": "$theme.typography.font300.fontFamily",
                      "fontSize": "$theme.typography.font300.fontSize",
                      "fontWeight": "$theme.typography.font300.fontWeight",
                      "lineHeight": "$theme.typography.font300.lineHeight",
                      "paddingBottom": "$theme.sizing.scale500",
                      "paddingLeft": "$theme.sizing.scale800",
                      "paddingRight": "$theme.sizing.scale800",
                      "paddingTop": "$theme.sizing.scale500",
                    }
                  }
                >
                  Tab 3 content
                </div>
              </MockStyledComponent>
            </TabContent>
          </div>
        </MockStyledComponent>
      </Root>
    </Tabs>
  </StatefulTabs>
</Component>
`;

exports[`StatefulTabs basic render with initial state: Stateful tabs render correctly with initial state 1`] = `
<Component
  initialState={
    Object {
      "activeKey": "1",
    }
  }
>
  <StatefulTabs
    disabled={false}
    initialState={
      Object {
        "activeKey": "1",
      }
    }
    onChange={[Function]}
    overrides={Object {}}
    stateReducer={[Function]}
  >
    <Tabs
      activeKey="1"
      disabled={false}
      onChange={[Function]}
      orientation="horizontal"
      overrides={Object {}}
      renderAll={false}
    >
      <Root
        $disabled={false}
        $orientation="horizontal"
        data-baseweb="tabs"
      >
        <MockStyledComponent
          $disabled={false}
          $orientation="horizontal"
          data-baseweb="tabs"
          forwardedRef={null}
        >
          <div
            data-baseweb="tabs"
            styled-component="true"
            test-style={
              Object {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <TabBar
              $disabled={false}
              $orientation="horizontal"
              role="tablist"
            >
              <MockStyledComponent
                $disabled={false}
                $orientation="horizontal"
                forwardedRef={null}
                role="tablist"
              >
                <div
                  role="tablist"
                  styled-component="true"
                  test-style={
                    Object {
                      "backgroundColor": "$theme.colors.tabBarFill",
                      "display": "flex",
                      "flexDirection": "row",
                      "paddingLeft": "$theme.sizing.scale400",
                      "paddingRight": "$theme.sizing.scale400",
                    }
                  }
                >
                  <TabComponent
                    $orientation="horizontal"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="0"
                    key="0/.0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    title="Tab Link 1"
                  >
                    <Tab
                      $active={false}
                      $disabled={false}
                      $orientation="horizontal"
                      aria-disabled={null}
                      aria-selected={false}
                      id="0"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $orientation="horizontal"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={null}
                        id="0"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="0"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style={
                            Object {
                              ":focus": Object {
                                "color": "$theme.colors.primary",
                              },
                              ":hover": Object {
                                "color": "$theme.colors.primary",
                              },
                              "borderBottom": "none",
                              "boxSizing": "border-box",
                              "color": "$theme.colors.tabColor",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "$theme.typography.font200.fontFamily",
                              "fontSize": "$theme.typography.font200.fontSize",
                              "fontWeight": "$theme.typography.font200.fontWeight",
                              "lineHeight": "$theme.typography.font200.lineHeight",
                              "marginLeft": "$theme.sizing.scale200",
                              "marginRight": "$theme.sizing.scale200",
                              "paddingBottom": "$theme.sizing.scale600",
                              "paddingLeft": "$theme.sizing.scale300",
                              "paddingRight": "$theme.sizing.scale300",
                              "paddingTop": "$theme.sizing.scale600",
                            }
                          }
                        >
                          Tab Link 1
                        </div>
                      </MockStyledComponent>
                    </Tab>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    active={true}
                    disabled={false}
                    expanded={false}
                    id="1"
                    key="1/.1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    title="Tab Link 2"
                  >
                    <Tab
                      $active={true}
                      $disabled={false}
                      $orientation="horizontal"
                      aria-disabled={null}
                      aria-selected={true}
                      id="1"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={true}
                        $disabled={false}
                        $orientation="horizontal"
                        aria-disabled={null}
                        aria-selected={true}
                        forwardedRef={null}
                        id="1"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={true}
                          id="1"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style={
                            Object {
                              ":focus": Object {
                                "color": "$theme.colors.primary",
                              },
                              ":hover": Object {
                                "color": "$theme.colors.primary",
                              },
                              "borderBottom": "2px solid $theme.colors.primary",
                              "boxSizing": "border-box",
                              "color": "$theme.colors.colorPrimary",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "$theme.typography.font200.fontFamily",
                              "fontSize": "$theme.typography.font200.fontSize",
                              "fontWeight": "$theme.typography.font200.fontWeight",
                              "lineHeight": "$theme.typography.font200.lineHeight",
                              "marginLeft": "$theme.sizing.scale200",
                              "marginRight": "$theme.sizing.scale200",
                              "paddingBottom": "$theme.sizing.scale600",
                              "paddingLeft": "$theme.sizing.scale300",
                              "paddingRight": "$theme.sizing.scale300",
                              "paddingTop": "$theme.sizing.scale600",
                            }
                          }
                        >
                          Tab Link 2
                        </div>
                      </MockStyledComponent>
                    </Tab>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="2"
                    key="2/.2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    title="Tab Link 3"
                  >
                    <Tab
                      $active={false}
                      $disabled={false}
                      $orientation="horizontal"
                      aria-disabled={null}
                      aria-selected={false}
                      id="2"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $orientation="horizontal"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={null}
                        id="2"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="2"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style={
                            Object {
                              ":focus": Object {
                                "color": "$theme.colors.primary",
                              },
                              ":hover": Object {
                                "color": "$theme.colors.primary",
                              },
                              "borderBottom": "none",
                              "boxSizing": "border-box",
                              "color": "$theme.colors.tabColor",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "$theme.typography.font200.fontFamily",
                              "fontSize": "$theme.typography.font200.fontSize",
                              "fontWeight": "$theme.typography.font200.fontWeight",
                              "lineHeight": "$theme.typography.font200.lineHeight",
                              "marginLeft": "$theme.sizing.scale200",
                              "marginRight": "$theme.sizing.scale200",
                              "paddingBottom": "$theme.sizing.scale600",
                              "paddingLeft": "$theme.sizing.scale300",
                              "paddingRight": "$theme.sizing.scale300",
                              "paddingTop": "$theme.sizing.scale600",
                            }
                          }
                        >
                          Tab Link 3
                        </div>
                      </MockStyledComponent>
                    </Tab>
                  </TabComponent>
                </div>
              </MockStyledComponent>
            </TabBar>
            <TabContent
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="0"
              key="0/.0"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="0"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="0"
                  role="tabpanel"
                  styled-component="true"
                  test-style={
                    Object {
                      "display": "none",
                      "fontFamily": "$theme.typography.font300.fontFamily",
                      "fontSize": "$theme.typography.font300.fontSize",
                      "fontWeight": "$theme.typography.font300.fontWeight",
                      "lineHeight": "$theme.typography.font300.lineHeight",
                      "paddingBottom": "$theme.sizing.scale500",
                      "paddingLeft": "$theme.sizing.scale800",
                      "paddingRight": "$theme.sizing.scale800",
                      "paddingTop": "$theme.sizing.scale500",
                    }
                  }
                />
              </MockStyledComponent>
            </TabContent>
            <TabContent
              $active={true}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="1"
              key="1/.1"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={true}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="1"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="1"
                  role="tabpanel"
                  styled-component="true"
                  test-style={
                    Object {
                      "display": "block",
                      "fontFamily": "$theme.typography.font300.fontFamily",
                      "fontSize": "$theme.typography.font300.fontSize",
                      "fontWeight": "$theme.typography.font300.fontWeight",
                      "lineHeight": "$theme.typography.font300.lineHeight",
                      "paddingBottom": "$theme.sizing.scale500",
                      "paddingLeft": "$theme.sizing.scale800",
                      "paddingRight": "$theme.sizing.scale800",
                      "paddingTop": "$theme.sizing.scale500",
                    }
                  }
                >
                  Tab 2 content
                </div>
              </MockStyledComponent>
            </TabContent>
            <TabContent
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="2"
              key="2/.2"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="2"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="2"
                  role="tabpanel"
                  styled-component="true"
                  test-style={
                    Object {
                      "display": "none",
                      "fontFamily": "$theme.typography.font300.fontFamily",
                      "fontSize": "$theme.typography.font300.fontSize",
                      "fontWeight": "$theme.typography.font300.fontWeight",
                      "lineHeight": "$theme.typography.font300.lineHeight",
                      "paddingBottom": "$theme.sizing.scale500",
                      "paddingLeft": "$theme.sizing.scale800",
                      "paddingRight": "$theme.sizing.scale800",
                      "paddingTop": "$theme.sizing.scale500",
                    }
                  }
                />
              </MockStyledComponent>
            </TabContent>
          </div>
        </MockStyledComponent>
      </Root>
    </Tabs>
  </StatefulTabs>
</Component>
`;

exports[`StatefulTabs basic render: Stateful tabs render correctly 1`] = `
<Component>
  <StatefulTabs
    disabled={false}
    onChange={[Function]}
    overrides={Object {}}
    stateReducer={[Function]}
  >
    <Tabs
      activeKey="0"
      disabled={false}
      onChange={[Function]}
      orientation="horizontal"
      overrides={Object {}}
      renderAll={false}
    >
      <Root
        $disabled={false}
        $orientation="horizontal"
        data-baseweb="tabs"
      >
        <MockStyledComponent
          $disabled={false}
          $orientation="horizontal"
          data-baseweb="tabs"
          forwardedRef={null}
        >
          <div
            data-baseweb="tabs"
            styled-component="true"
            test-style={
              Object {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <TabBar
              $disabled={false}
              $orientation="horizontal"
              role="tablist"
            >
              <MockStyledComponent
                $disabled={false}
                $orientation="horizontal"
                forwardedRef={null}
                role="tablist"
              >
                <div
                  role="tablist"
                  styled-component="true"
                  test-style={
                    Object {
                      "backgroundColor": "$theme.colors.tabBarFill",
                      "display": "flex",
                      "flexDirection": "row",
                      "paddingLeft": "$theme.sizing.scale400",
                      "paddingRight": "$theme.sizing.scale400",
                    }
                  }
                >
                  <TabComponent
                    $orientation="horizontal"
                    active={true}
                    disabled={false}
                    expanded={false}
                    id="0"
                    key="0/.0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    title="Tab Link 1"
                  >
                    <Tab
                      $active={true}
                      $disabled={false}
                      $orientation="horizontal"
                      aria-disabled={null}
                      aria-selected={true}
                      id="0"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={true}
                        $disabled={false}
                        $orientation="horizontal"
                        aria-disabled={null}
                        aria-selected={true}
                        forwardedRef={null}
                        id="0"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={true}
                          id="0"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style={
                            Object {
                              ":focus": Object {
                                "color": "$theme.colors.primary",
                              },
                              ":hover": Object {
                                "color": "$theme.colors.primary",
                              },
                              "borderBottom": "2px solid $theme.colors.primary",
                              "boxSizing": "border-box",
                              "color": "$theme.colors.colorPrimary",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "$theme.typography.font200.fontFamily",
                              "fontSize": "$theme.typography.font200.fontSize",
                              "fontWeight": "$theme.typography.font200.fontWeight",
                              "lineHeight": "$theme.typography.font200.lineHeight",
                              "marginLeft": "$theme.sizing.scale200",
                              "marginRight": "$theme.sizing.scale200",
                              "paddingBottom": "$theme.sizing.scale600",
                              "paddingLeft": "$theme.sizing.scale300",
                              "paddingRight": "$theme.sizing.scale300",
                              "paddingTop": "$theme.sizing.scale600",
                            }
                          }
                        >
                          Tab Link 1
                        </div>
                      </MockStyledComponent>
                    </Tab>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="1"
                    key="1/.1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    title="Tab Link 2"
                  >
                    <Tab
                      $active={false}
                      $disabled={false}
                      $orientation="horizontal"
                      aria-disabled={null}
                      aria-selected={false}
                      id="1"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $orientation="horizontal"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={null}
                        id="1"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="1"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style={
                            Object {
                              ":focus": Object {
                                "color": "$theme.colors.primary",
                              },
                              ":hover": Object {
                                "color": "$theme.colors.primary",
                              },
                              "borderBottom": "none",
                              "boxSizing": "border-box",
                              "color": "$theme.colors.tabColor",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "$theme.typography.font200.fontFamily",
                              "fontSize": "$theme.typography.font200.fontSize",
                              "fontWeight": "$theme.typography.font200.fontWeight",
                              "lineHeight": "$theme.typography.font200.lineHeight",
                              "marginLeft": "$theme.sizing.scale200",
                              "marginRight": "$theme.sizing.scale200",
                              "paddingBottom": "$theme.sizing.scale600",
                              "paddingLeft": "$theme.sizing.scale300",
                              "paddingRight": "$theme.sizing.scale300",
                              "paddingTop": "$theme.sizing.scale600",
                            }
                          }
                        >
                          Tab Link 2
                        </div>
                      </MockStyledComponent>
                    </Tab>
                  </TabComponent>
                  <TabComponent
                    $orientation="horizontal"
                    active={false}
                    disabled={false}
                    expanded={false}
                    id="2"
                    key="2/.2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onSelect={[Function]}
                    title="Tab Link 3"
                  >
                    <Tab
                      $active={false}
                      $disabled={false}
                      $orientation="horizontal"
                      aria-disabled={null}
                      aria-selected={false}
                      id="2"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      <MockStyledComponent
                        $active={false}
                        $disabled={false}
                        $orientation="horizontal"
                        aria-disabled={null}
                        aria-selected={false}
                        forwardedRef={null}
                        id="2"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="tab"
                        tabIndex={0}
                      >
                        <div
                          aria-disabled={null}
                          aria-selected={false}
                          id="2"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="tab"
                          styled-component="true"
                          tabIndex={0}
                          test-style={
                            Object {
                              ":focus": Object {
                                "color": "$theme.colors.primary",
                              },
                              ":hover": Object {
                                "color": "$theme.colors.primary",
                              },
                              "borderBottom": "none",
                              "boxSizing": "border-box",
                              "color": "$theme.colors.tabColor",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "$theme.typography.font200.fontFamily",
                              "fontSize": "$theme.typography.font200.fontSize",
                              "fontWeight": "$theme.typography.font200.fontWeight",
                              "lineHeight": "$theme.typography.font200.lineHeight",
                              "marginLeft": "$theme.sizing.scale200",
                              "marginRight": "$theme.sizing.scale200",
                              "paddingBottom": "$theme.sizing.scale600",
                              "paddingLeft": "$theme.sizing.scale300",
                              "paddingRight": "$theme.sizing.scale300",
                              "paddingTop": "$theme.sizing.scale600",
                            }
                          }
                        >
                          Tab Link 3
                        </div>
                      </MockStyledComponent>
                    </Tab>
                  </TabComponent>
                </div>
              </MockStyledComponent>
            </TabBar>
            <TabContent
              $active={true}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="0"
              key="0/.0"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={true}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="0"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="0"
                  role="tabpanel"
                  styled-component="true"
                  test-style={
                    Object {
                      "display": "block",
                      "fontFamily": "$theme.typography.font300.fontFamily",
                      "fontSize": "$theme.typography.font300.fontSize",
                      "fontWeight": "$theme.typography.font300.fontWeight",
                      "lineHeight": "$theme.typography.font300.lineHeight",
                      "paddingBottom": "$theme.sizing.scale500",
                      "paddingLeft": "$theme.sizing.scale800",
                      "paddingRight": "$theme.sizing.scale800",
                      "paddingTop": "$theme.sizing.scale500",
                    }
                  }
                >
                  Tab 1 content
                </div>
              </MockStyledComponent>
            </TabContent>
            <TabContent
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="1"
              key="1/.1"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="1"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="1"
                  role="tabpanel"
                  styled-component="true"
                  test-style={
                    Object {
                      "display": "none",
                      "fontFamily": "$theme.typography.font300.fontFamily",
                      "fontSize": "$theme.typography.font300.fontSize",
                      "fontWeight": "$theme.typography.font300.fontWeight",
                      "lineHeight": "$theme.typography.font300.lineHeight",
                      "paddingBottom": "$theme.sizing.scale500",
                      "paddingLeft": "$theme.sizing.scale800",
                      "paddingRight": "$theme.sizing.scale800",
                      "paddingTop": "$theme.sizing.scale500",
                    }
                  }
                />
              </MockStyledComponent>
            </TabContent>
            <TabContent
              $active={false}
              $disabled={false}
              $orientation="horizontal"
              aria-labelledby="2"
              key="2/.2"
              role="tabpanel"
            >
              <MockStyledComponent
                $active={false}
                $disabled={false}
                $orientation="horizontal"
                aria-labelledby="2"
                forwardedRef={null}
                role="tabpanel"
              >
                <div
                  aria-labelledby="2"
                  role="tabpanel"
                  styled-component="true"
                  test-style={
                    Object {
                      "display": "none",
                      "fontFamily": "$theme.typography.font300.fontFamily",
                      "fontSize": "$theme.typography.font300.fontSize",
                      "fontWeight": "$theme.typography.font300.fontWeight",
                      "lineHeight": "$theme.typography.font300.lineHeight",
                      "paddingBottom": "$theme.sizing.scale500",
                      "paddingLeft": "$theme.sizing.scale800",
                      "paddingRight": "$theme.sizing.scale800",
                      "paddingTop": "$theme.sizing.scale500",
                    }
                  }
                />
              </MockStyledComponent>
            </TabContent>
          </div>
        </MockStyledComponent>
      </Root>
    </Tabs>
  </StatefulTabs>
</Component>
`;
